# teorpar-task1

./: CMakeLists.txt  Makefile  README.MD  main.cpp
